# TKinter

./: .gitignore  Actividad_pipelines_iris_ElectivaII_.ipynb  IrisApp.py  README.md  modelo.pkl  pyproject.toml
